# xllamacpp

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  MANIFEST.in  Makefile  README.md  params_reference.md  pyproject.toml  requirements.txt  setup.py  versioneer.py
.github/workflows/: build-wheel-cuda-hip.yaml  build-wheel-cuda.yaml  build-wheel.yaml  ci.yaml  release-github-pypi.yaml
scripts/: .clang-format  bump.sh  copy_libs.py  funcs.sh  gen_props.py  generate-release-version.sh  generate_params_doc.py  get-releases.sh  info.sh  mikupad.html  releases-to-pep-503.sh  setup.sh  snap.sh  start.py  strip.py
scripts/bind/: all_includes.hpp  bind.mk
src/cyllama/: __init__.py  core.pyx  cyllama.pyx  llama_cpp.pxd  llamalib.h  log.py
src/pyllama/: __init__.py  llama_cpp.pxd  pyllama.pyx  server.cpp  server.h  server.pxd
src/xllamacpp/: __init__.py  _version.py  llama_cpp.pxd  memory.py  server.cpp  server.h  server.pxd  xllamacpp.pxd  xllamacpp.pyx
tests/: bge-m3-metadata.json  conftest.py  highlevel.py  model.py  scratch.py  simple.py  test_api.py  test_chat.py  test_common.py  test_context.py  test_highlevel.py  test_memory.py  test_model.py  test_params.py  test_platform.cpp  test_sampler.py  test_server.py  test_server_http.py  test_simple.py
tests/callbacks/: .gitignore  Makefile  README.md  cheese.pyx  cheesefinder.h  run_cheese.py  setup.py
