[project]
name = "xllamacpp"
version = "0.1.0"
description = "A Python wrapper of llama.cpp"
readme = "README.md"
authors = [
    { name = "Shakeeb Alireza", email = "me@example.org" }
]
requires-python = ">=3.8"
# dependencies = ["numpy >= 2"]
dependencies = []

[project.optional-dependencies]
test = ['pytest', 'pytest-cov']

[build-system]
requires = ["setuptools >= 61", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# addopts = "--cov=pyllama --cov-report html"
# addopts = "-ra -q"
