[project]
name = "xllamacpp"
dynamic = ["version", "license"]
description = "A Python wrapper of llama.cpp"
readme = "README.md"
authors = [
    { name = "codingl2k1", email = "codingl2k1@outlook.com" }
]
requires-python = ">3.8"
dependencies = ["gguf", "orjson"]

[project.optional-dependencies]
test = ['pytest', 'pytest-cov']

[build-system]
requires = ["setuptools >= 61", "cython", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/xllamacpp/_version.py"
versionfile_build = "xllamacpp/_version.py"
tag_prefix = "v"
parentdir_prefix = "xllamacpp-"

[tool.black]
required-version = "25.1.0"
include = '\.pyi?$'
exclude = '_version.py'
